[gd_scene load_steps=23 format=3 uid="uid://cmh48y7u3mt28"]

[ext_resource type="Script" path="res://Scripts/HandleMainMenu.gd" id="1_k3gme"]
[ext_resource type="AudioStream" uid="uid://2xua1dbv1kbj" path="res://Music/menu.mp3" id="1_ktdko"]
[ext_resource type="Texture2D" uid="uid://blf0wdx7crwu4" path="res://Textures/Touch Buttons/UpButton.png" id="2_bivmc"]
[ext_resource type="Script" path="res://Scripts/UpdateMenuTooltips.gd" id="2_v1t8o"]
[ext_resource type="AudioStream" uid="uid://dya48y5vbjyl6" path="res://Sounds/Menu/Move.wav" id="3_klbu0"]
[ext_resource type="Texture2D" uid="uid://bxj0q4tryyfpb" path="res://Textures/Touch Buttons/DownButton.png" id="3_xfgmy"]
[ext_resource type="Texture2D" uid="uid://7mdkcc11lppg" path="res://Textures/Touch Buttons/OkButton.png" id="4_4eubx"]
[ext_resource type="AudioStream" uid="uid://0e7tulo1bnel" path="res://Sounds/Menu/Return.wav" id="4_pwklc"]
[ext_resource type="AudioStream" uid="uid://00u7u4wd00fr" path="res://Sounds/Menu/Select.wav" id="5_0jvob"]
[ext_resource type="Script" path="res://Scripts/PositionTouchButtons.gd" id="6_4wvbr"]
[ext_resource type="Script" path="res://DifficultySelection.gd" id="8_icr6m"]
[ext_resource type="Texture2D" uid="uid://cns87cpy0vsdv" path="res://Textures/Touch Buttons/BackButton.png" id="8_mnxak"]
[ext_resource type="Script" path="res://Scripts/ExitPopup.gd" id="9_njvhw"]

[sub_resource type="LabelSettings" id="LabelSettings_7t66e"]
font_size = 105

[sub_resource type="LabelSettings" id="LabelSettings_bs06y"]
font_size = 62

[sub_resource type="LabelSettings" id="LabelSettings_0yndp"]
font_size = 42

[sub_resource type="LabelSettings" id="LabelSettings_oeasy"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_xxmgy"]
font_size = 56

[sub_resource type="Animation" id="Animation_j8ejr"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v5ys4"]
_data = {
"fade_out": SubResource("Animation_j8ejr")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dcp5a"]
bg_color = Color(0.101961, 0.305882, 0.360784, 1)
shadow_color = Color(0, 0, 0, 0.211765)
shadow_size = 1
shadow_offset = Vector2(20, 20)

[sub_resource type="LabelSettings" id="LabelSettings_kwj1i"]
font_size = 32

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 4.0
offset_right = 2.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k3gme")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -4.0
offset_right = -2.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.294118, 0.345098, 1)

[node name="Info" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -208.0
offset_bottom = -208.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Info"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -338.0
offset_top = -230.0
offset_right = 338.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 0
text = "Swordlink"
label_settings = SubResource("LabelSettings_7t66e")
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Info"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -225.0
offset_top = -63.0
offset_right = 225.0
grow_horizontal = 2
grow_vertical = 0
text = "Glitchfall Chronicles"
label_settings = SubResource("LabelSettings_bs06y")
horizontal_alignment = 1

[node name="Subsubtitle" type="Label" parent="Info"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -441.0
offset_top = 25.0
offset_right = 441.0
offset_bottom = 92.0
grow_horizontal = 2
text = "Public University Demo
"
label_settings = SubResource("LabelSettings_0yndp")
horizontal_alignment = 1

[node name="Tooltips" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -49.0
offset_right = 187.0
offset_bottom = -15.0
grow_vertical = 0
text = "Enter = Confirm"
label_settings = SubResource("LabelSettings_oeasy")
vertical_alignment = 2
script = ExtResource("2_v1t8o")

[node name="MenuBack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_pwklc")
volume_db = -10.0

[node name="MenuMove" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_klbu0")
volume_db = -10.0

[node name="MenuSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_0jvob")
volume_db = -10.0

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_ktdko")
volume_db = 12.0
autoplay = true

[node name="MenuOptions" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -327.0
offset_top = -520.0
offset_right = 329.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="NewGame" type="Label" parent="MenuOptions"]
layout_mode = 2
text = "NEW GAME"
label_settings = SubResource("LabelSettings_xxmgy")
horizontal_alignment = 1

[node name="Help" type="Label" parent="MenuOptions"]
layout_mode = 2
text = "INFO & CONTROLS"
label_settings = SubResource("LabelSettings_xxmgy")
horizontal_alignment = 1

[node name="ExitGame" type="Label" parent="MenuOptions"]
layout_mode = 2
text = "EXIT GAME
"
label_settings = SubResource("LabelSettings_xxmgy")
horizontal_alignment = 1

[node name="Obfuscation" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Obfuscation"]
libraries = {
"": SubResource("AnimationLibrary_v5ys4")
}
autoplay = "fade_out"

[node name="ExitPopup" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -568.0
offset_top = -320.0
offset_right = 568.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dcp5a")
script = ExtResource("9_njvhw")

[node name="Message" type="VBoxContainer" parent="ExitPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -91.0
offset_right = 0.5
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="ExitPopup/Message"]
custom_minimum_size = Vector2(940, 0)
layout_mode = 2
text = "Funny Quote."
label_settings = SubResource("LabelSettings_0yndp")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Spacer" type="Control" parent="ExitPopup/Message"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Confirm" type="Label" parent="ExitPopup/Message"]
custom_minimum_size = Vector2(940, 0)
layout_mode = 2
text = "Press [CONFIRM] to quit."
label_settings = SubResource("LabelSettings_0yndp")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Cancel" type="Label" parent="ExitPopup/Message"]
custom_minimum_size = Vector2(940, 0)
layout_mode = 2
text = "Press [CANCEL] to return to menu."
label_settings = SubResource("LabelSettings_0yndp")
horizontal_alignment = 1
autowrap_mode = 3

[node name="DifficultyPopup" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -568.0
offset_top = -320.0
offset_right = 568.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dcp5a")
script = ExtResource("8_icr6m")

[node name="Message" type="VBoxContainer" parent="DifficultyPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -91.0
offset_right = 0.5
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="DifficultyPopup/Message"]
custom_minimum_size = Vector2(940, 0)
layout_mode = 2
text = "Choose a difficulty level."
label_settings = SubResource("LabelSettings_0yndp")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Spacer" type="Control" parent="DifficultyPopup/Message"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="DifficultyOptions" type="VBoxContainer" parent="DifficultyPopup/Message"]
layout_mode = 2

[node name="Difficulty1" type="Label" parent="DifficultyPopup/Message/DifficultyOptions"]
custom_minimum_size = Vector2(940, 0)
layout_mode = 2
text = "Framecapped"
label_settings = SubResource("LabelSettings_0yndp")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Difficulty2" type="Label" parent="DifficultyPopup/Message/DifficultyOptions"]
custom_minimum_size = Vector2(940, 0)
layout_mode = 2
text = "Boosted"
label_settings = SubResource("LabelSettings_0yndp")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Difficulty3" type="Label" parent="DifficultyPopup/Message/DifficultyOptions"]
custom_minimum_size = Vector2(940, 0)
layout_mode = 2
text = "Overclocked"
label_settings = SubResource("LabelSettings_0yndp")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Difficulty4" type="Label" parent="DifficultyPopup/Message/DifficultyOptions"]
custom_minimum_size = Vector2(940, 0)
layout_mode = 2
text = "Glitchfall"
label_settings = SubResource("LabelSettings_0yndp")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Spacer2" type="Control" parent="DifficultyPopup/Message"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Tooltip" type="Label" parent="DifficultyPopup/Message"]
custom_minimum_size = Vector2(940, 0)
layout_mode = 2
text = "Description goes here."
label_settings = SubResource("LabelSettings_kwj1i")
horizontal_alignment = 1
autowrap_mode = 3

[node name="TouchButtons" type="Node2D" parent="."]
script = ExtResource("6_4wvbr")

[node name="Left" type="Node2D" parent="TouchButtons"]
position = Vector2(70, 680)

[node name="Up" type="TouchScreenButton" parent="TouchButtons/Left"]
texture_normal = ExtResource("2_bivmc")
action = "MenuUp"
visibility_mode = 1

[node name="Down" type="TouchScreenButton" parent="TouchButtons/Left"]
position = Vector2(320, 0)
texture_normal = ExtResource("3_xfgmy")
action = "MenuDown"
visibility_mode = 1

[node name="Right" type="Node2D" parent="TouchButtons"]
position = Vector2(1870, 680)

[node name="Back" type="TouchScreenButton" parent="TouchButtons/Right"]
position = Vector2(-575, 0)
texture_normal = ExtResource("8_mnxak")
action = "MenuBack"
visibility_mode = 1

[node name="Ok" type="TouchScreenButton" parent="TouchButtons/Right"]
position = Vector2(-255, 0)
texture_normal = ExtResource("4_4eubx")
action = "MenuConfirm"
visibility_mode = 1

[connection signal="visibility_changed" from="ExitPopup" to="ExitPopup" method="_visibility_changed"]
